Finished App For 1v1 Connect 3
So far i decided to  stop the app development. Now it's possible to play
1v1, but not against the Computer. This functionality will be
implemented later.
1 - Setted Up the winning conditions and the winner result
2 - Setted Up the draw conditions
3 - Setted Up the Play Again function

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -123,6 +123,33 @@
             android:tag="8"
             />
     </GridLayout>
+    <LinearLayout
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:id="@+id/playAgainLayout"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:orientation="vertical"
+        android:padding="10dp"
+        android:background="@color/colorPrimaryDark"
+        android:visibility="invisible"
+        >
+        <TextView
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:id="@+id/winnerMessage"
+            android:textSize="20sp"
+            android:textColor="@color/white"
+        />
+        <Button
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:id="@+id/playAgainButton"
+            android:text="@string/playAgain"
+            android:layout_gravity="center_horizontal"
+            android:onClick="playAgain"
+            />
+    </LinearLayout>
 
 
 </RelativeLayout>
